added tests for Hw09